[package]
name = "executor"
description = "An executor is to function execution as an allocator is to allocation"
license = "GPL-3.0"
version = "0.1.0"
authors = ["MaidSafe Developers <dev@maidsafe.net>"]

[dependencies]
mio = "0.5.1"

[[example]]
bench = false
name = "sample"
path = "examples/sample.rs"
test = false
